[package]
name = "cs2-acceptor"
version = "1.0.0"
edition = "2021"

[features]
# Disable CS2 window detection for testing purposes.
# This feature will NEVER be shipped and has to be compiled from source.
ignore-cs2 = []

[dependencies]
image = "0.25.5"
rdev = "0.5.3"
xcap = "0.0.14"

[build-dependencies]
winresource = "0.1.17"
